site routing anchor tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>hello vapor</p>
-    <button> <a href="">click to go on app 1</a></button>
+    <button> <a href="https://www.google.com/">click to go on app 1</a></button>
 </body>
 </html>
