--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="topnav" id="myTopnav">
         <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
+        <a href="https://www.facebook.com/">News</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
